2015-02-11  Josh Stone  <jistone@redhat.com>

	* encoded-value.h (read_encoded_value): Initialize value.

2015-02-11  Petr Machata  <pmachata@redhat.com>

	* dwarf_ranges.c (dwarf_ranges): Do not bail out when neither
	DW_AT_entry_pc nor DW_AT_low_pc are available.  Instead remember
	the fact in *BASEP and bail out later if it hasn't been updated by
	__libdw_read_begin_end_pair_inc.

2014-12-24  Mark Wielaard  <mjw@redhat.com>

	* dwarf_getsrc_die.c (dwarf_getsrc_die): Return the last line record
	smaller than or equal to addr, rather than returning immediately on
	a match.

2015-01-07  Mark Wielaard  <mjw@redhat.com>

	* cfi.h (struct Dwarf_CFI_s): Add search_table_len.
	* dwarf_getcfi_elf.c (getcfi_gnu_eh_frame): Check there is enough
	room in the search table for all entries. Store search_table_len.
	(getcfi_scn_eh_frame): Likewise.
	* encoded-value.h (encoded_value_size): Don't abort, return zero.
	(__libdw_cfi_read_address_inc): Check there is enough room to read
	values. Pass other byte order to read functions.
	(read_encoded_value): Check encoded_value_size. Don't abort, but
	set libdw errno and report failure. Check there is enough room to
	read values.
	* fde.c (binary_search_fde): Check encoded value size. Add hdr
	data buf and size to dummy_cfi.

2015-01-04  Mark Wielaard  <mjw@redhat.com>

	* dwarf_siblingof.c (dwarf_siblingof): Check sibling attribute
	is after current DIE.

2015-01-04  Mark Wielaard  <mjw@redhat.com>

	* cfi.c (enough_registers): Check reg < INT32_MAX / sizeof
	(dwarf_frame_register).

2015-01-02  Mark Wielaard  <mjw@redhat.com>

	* dwarf_getcfi_elf.c (parse_eh_frame_hdr): Add size check.
	(getcfi_gnu_eh_frame): Remove size check. Check d_buf is not NULL.
	(getcfi_scn_eh_frame): Check d_buf is not NULL.

2015-01-02  Mark Wielaard  <mjw@redhat.com>

	* dwarf_getlocation.c (__libdw_intern_expression): Check dbg is not
	NULL for DW_OP_call_ref and DW_OP_GNU_implicit_pointer. For
	DW_OP_addr if dbg is NULL then read argument directly.
