@@ -94,6 +94,9 @@ enum
     DW_TAG_rvalue_reference_type = 0x42,
     DW_TAG_template_alias = 0x43,
 
+    /* DWARF 5.  */
+    DW_TAG_atomic_type = 0x47,
+
     DW_TAG_lo_user = 0x4080,
 
     DW_TAG_MIPS_loop = 0x4081,
