@@ -1,3 +1,9 @@
+2015-02-09  Mark Wielaard  <mjw@redhat.com>
+
+	* dwarf.h: Add DW_TAG_atomic_type.
+	* libdw.h (dwarf_peel_type): Document DW_TAG_atomic_type.
+	* dwarf_peel_type.c (dwarf_peel_type): Handle DW_TAG_atomic_type.
+
 2015-02-11  Josh Stone  <jistone@redhat.com>
 
 	* encoded-value.h (read_encoded_value): Initialize value.
